# nocturne-kx

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists_new.txt  CONTRIBUTORS.md  Dockerfile  Doxyfile  LICENSE  NOTICE  Noc Logo.dc.html  README.md  SECURITY.md  docker-compose.yml  nocturne-kx.cpp  test_sodium.cpp
.github/: lighthouse-budget.json  release-notes.md
.github/workflows/: cmake.yml  comprehensive-test.yml  docs.yml  release.yml  security-audit.yml  security-scan.yml
docs/: OPERATIONS.md  SECURITY.md  api.md  architecture.md  index.md  package.json  roadmap.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/.vitepress/theme/components/: CodeShowcase.vue  FeatureGrid.vue  HeroAnimated.vue  NocturneArchFlow.vue  NocturneTimeline.vue  WireFormat.vue
docs/cli/: audit-verify.md  decrypt.md  encrypt.md  gen-receiver.md  gen-signer.md  index.md  tls.md
docs/guide/: audit.md  hsm.md  quickstart.md  replay.md  threat-model.md  tls.md  wire-format.md
docs/pqc/: domain-separation.md  index.md  kem.md  signatures.md
k8s/: deployment.yaml
scripts/: deploy.sh
src/: double_ratchet.hpp  handshake.hpp  pkcs11_wrapper.cpp  pkcs11_wrapper.hpp  tcp_tls_transport.hpp  transport.hpp
src/core/: byte_span.hpp  error.hpp  file_io.cpp  file_io.hpp  flags.hpp  result.hpp  side_channel.cpp  side_channel.hpp  types.hpp
src/hsm/: file_hsm.hpp  hsm_errors.hpp  hsm_interface.hpp  pkcs11_hsm.hpp
src/hsm/inline/: file_hsm.hpp  hsm_interface.hpp  pkcs11_adapter.hpp  secure_storage.hpp
src/pqc/: pqc_config.hpp
src/pqc/kem/: hybrid_kem.hpp  kem_factory.cpp  kem_factory.hpp  kem_interface.cpp  kem_interface.hpp  mlkem_wrapper.hpp
src/pqc/sig/: hybrid_sig.hpp  mldsa_wrapper.hpp  sig_factory.cpp  sig_factory.hpp  sig_interface.cpp  sig_interface.hpp
src/protocol/: aead.hpp  kdf.hpp  keys.hpp  messaging.cpp  messaging.hpp  packet.cpp  packet.hpp  packet_io.hpp  signing.hpp
src/security/: audit_logger.hpp  key_rotation.hpp  siem_connector.hpp
src/security/inline/: audit_logger.cpp  audit_logger.hpp  memory_protection.cpp  memory_protection.hpp  rate_limiter.cpp  rate_limiter.hpp  replay_db.cpp  replay_db.hpp
tests/: fuzzer_main.cpp  pkcs11_integration.cpp  test_main.cpp
tests/core/: test_error_result.cpp  test_side_channel.cpp
tests/hsm/: test_hsm_comprehensive.cpp
tests/pqc/: CMakeLists.txt  test_hybrid_kem.cpp  test_liboqs_basic.cpp  test_pqc_vectors.cpp
tests/protocol/: test_integration.cpp  test_tcp_tls_transport.cpp
tests/security/: test_siem_connector.cpp
